# WebFluent

./: .gitignore  .hintrc  AGENTS.md  Cargo.toml  README.md  TODO.txt  ast.sample.json  compiler.output.sample.html  deno.jsonc  index.ts  install.ps1  install.sh  justfile  main.ts  parser.ts  syntax  tokens.sample.json  webfluent.app.json
.github/workflows/: release.yml
bindings/node/: index.d.ts  index.js  package.json  test.js
cli/: cli.ts  cli.types.ts  helper.ts  helper.types.ts  hundleArgs.ts
cli/types/: cli.ts
compiler/: htmlElements.ts  style.ts
compiler/elements/: button.ts  component.ts  dialog.ts  grid.ts  image.ts  input.ts  page.assets.ts  page.ts  text.ts
compiler/elements/tables/: table.ts  tdata.ts  thead.ts  trow.ts
compiler/elements/tabs/: tab.ts  tabPage.ts
crates/wf-lsp/: Cargo.toml
crates/wf-lsp/src/: backend.rs  completion.rs  diagnostics.rs  hover.rs  main.rs
docs/: 404.html  ACCESSIBILITY_SPEC.md  ANIMATION_SPEC.md  DESIGN.md  SSG_SPEC.md  app.js  index.html  styles.css
docs/404/: index.html
docs/accessibility/: index.html
docs/animation/: index.html
docs/cli/: index.html
docs/components/: index.html
docs/getting-started/: index.html
docs/guide/: index.html
docs/i18n/: index.html
docs/pdf/: index.html
docs/ssg/: index.html
docs/styling/: index.html
docs/template-engine/: index.html
editors/vscode/: .vscodeignore  language-configuration.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/zed/: Cargo.toml  extension.toml  extension.wasm
enviroment/: config.ts  config.types.ts  eval.ts
lexer/: lexer.ts  types.ts
parser/: childrens.ts  component.attributes.ts  component.ts  eof.ts  page.attributes.ts  page.ts  parser.ts
parser/interfaces/: IAST.ts  IAstNode.ts  IStyle.ts  attributes.ts  attributes.types.ts
parser/style/: column.ts  container.ts  row.ts  style.ts
parser/tags/: attributes.ts  button.attributes.ts  button.ts  dialog.attributes.ts  dialog.ts  image.attributes.ts  image.ts  input.attributes.ts  input.ts  text.attributes.ts  text.ts
server/: http.ts  http.utils.ts
site/: webfluent.app.json
site/src/: App.wf
spec/: I18N_SPEC.md  SLIDES_SPEC.md  SPEC.md  TEMPLATE_ENGINE_SPEC.md
src/: Home.wf  lib.rs  main.rs
src/cli/: build.rs  generate.rs  init.rs  mod.rs  render.rs  serve.rs
src/codegen/: css.rs  html.rs  js.rs  mod.rs  pdf.rs  slides.rs  ssg.rs  style.rs
src/components/: navbar.wf
src/config/: mod.rs  project.rs
src/error/: diagnostic.rs  mod.rs
src/lexer/: lexer.rs  mod.rs  token.rs
src/linter/: accessibility.rs  mod.rs  pdf_validation.rs  slides_validation.rs
src/parser/: ast.rs  mod.rs  parser.rs
src/runtime/: mod.rs  runtime.js
src/template/: mod.rs
src/themes/: components.rs  mod.rs  tokens.rs
test/: main_bench.ts  main_test.ts
utils/: logging.ts
(+37 files in other folders)
