[package]
name = "webfluent"
version = "0.5.0-alpha"
edition = "2024"
description = "The Web-First Language — compiles to HTML, CSS, JavaScript, and PDF. 50+ built-in components, reactivity, routing, i18n, SSG, and template engine."
authors = ["Monzer Omer <monzer.a.omer@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/monzeromer-lab/WebFluent"
homepage = "https://monzeromer-lab.github.io/WebFluent"
documentation = "https://docs.rs/webfluent"
readme = "README.md"
keywords = ["web", "language", "compiler", "template-engine", "pdf"]
categories = ["compilers", "template-engine", "web-programming"]
rust-version = "1.85"

[package.metadata.deb]
maintainer = "Monzer Omer"
copyright = "2026 Monzer Omer"
depends = "$auto"
section = "devel"
priority = "optional"
assets = [
    ["target/release/wf", "usr/bin/", "755"],
]
extended-description = "A programming language that compiles to HTML, CSS, and JavaScript. Built-in components, reactivity, routing, i18n, animations, and SSG."

[lib]
name = "webfluent"
path = "src/lib.rs"

[[bin]]
name = "wf"
path = "src/main.rs"

[workspace]
members = [".", "crates/wf-lsp"]
exclude = ["editors/zed"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tiny_http = "0.12.0"
